<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_switch"
        android:title="@string/menuitem_switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_swipe"
        android:title="@string/menuitem_swipe" />
    <item
        android:id="@+id/menu_item_clear_cache"
        android:title="@string/menuitem_clear_cache" />
</menu>